# zeno

./: .gitignore  BTCNFT_Protocol_Implementation_Plan.md  CLAUDE.md  README.md  foundry.toml
.claude/: launch.json
analysis/: README.md  pyproject.toml
analysis/results/: cross_validation.json  optimal_window_report.json  rolling_window_stats.json  threshold_windows.json  window_sweep.json
analysis/scripts/: fetch_btc_data.py  optimize_vesting.py  run_analysis.py
analysis/src/: __init__.py
analysis/src/analysis/: __init__.py  rolling_windows.py  window_optimization.py
analysis/src/export/: __init__.py
analysis/src/fetch/: __init__.py  btc_prices.py
assets/: Annual128Mono.sol  Annual256Mono.sol
cli/: .env.base.example  .env.example  btcnft  claim-dormant.sh  claim-match.sh  execute-mints.sh  increase-collateral.sh  mint.sh  pending-mint.sh  poke.sh  prove-activity.sh  recombine.sh  redeem.sh  separate.sh  setup.sh  status.sh  time-skip.sh  withdraw.sh
cli-issuer/: .env.example  btcnft-issuer
docs/: BTCNFT_Protocol_Comprehensive_Guide.md  GLOSSARY.md  NFT_Artwork_Guide.md  README.md  Testing_Stack.md  (+2 more)
scripts/pbsep/: pyproject.toml
scripts/pbsep/src/pbsep/: __init__.py  cli.py  gallery.py  matrix.py  pipeline.py  solidity.py  types.py
scripts/pbsep/src/pbsep/profiles/: __init__.py  loader.py
scripts/pbsep/src/pbsep/profiles/defaults/: medallion.yaml  medallion_filled.yaml
scripts/pbsep/src/pbsep/stages/: __init__.py  binarize.py  contrast.py  downscale.py  edges.py  export.py  luminance.py  morphology.py  normalize.py  threshold.py  vectorize.py
(+599 files in other folders)
